--- a/src/main/resources/static/css/app.css
+++ b/src/main/resources/static/css/app.css
@@ -6,57 +6,16 @@ html {
 body {
     min-height: 500px;
     padding-top: 70px;
-    background-color: silver;
+    background-image: url(//img.fifa.com/images/fwc/2018/bg.jpg);
+    background-color: #fff;
+    background-repeat: repeat-x;
+    background-position: center 0;
 }
 
 
-/* Custom page CSS
--------------------------------------------------- */
-
-#bg-overlay{
-    position: fixed;
-    left: 0;
-    top: 71px;
-    border: 1px solid black;
-    width: 100%;
-    height: 100%;
-    opacity: 0.5;
-    /* -webkit-background-size: cover; */
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    background: url(/img/logo-colors.jpg) no-repeat center center fixed;
-    z-index: -1;
-}
-.bg-color {
-    width: 100%;
-    height: 100%;
-    background: url(/img/logo-large-red.png) no-repeat center center fixed;
-}
-
-.bg-blue {
-    width: 100%;
-    height: 100%;
-    background: url(/img/logo-large-blue.jpg) no-repeat center center fixed;
-}
-.bg-red {
-    width: 100%;
-    height: 100%;
-    background: url(/img/logo-large-red.png) no-repeat center center fixed;
-}
-
-
-.login-fb {
-    background: url(/img/Round-Social-Media-Icons.jpg) -20px 127px;
-    width: 35px;
-    height: 35px;
-    display: inline-block;
-}
-.login-google {
-    background: url(/img/Round-Social-Media-Icons.jpg) -98px -207px;
-    width: 35px;
-    height: 35px;
-    display: inline-block;
+.container {
+    width: 1170px;
+    background-color: #fff
 }
 
 
