--- a/src/main/resources/static/css/app.css
+++ b/src/main/resources/static/css/app.css
@@ -31,6 +31,11 @@ body {
     padding: 10px 0 10px 0;
 }
 
+.flag {
+    width: 48px;
+    height: 32px;
+    border: 1px solid #c7c6c6;
+}
 /*!
  * IE10 viewport hack for Surface/desktop Windows 8 bug
  * Copyright 2014-2015 Twitter, Inc.
