--- a/src/main/resources/static/css/app.css
+++ b/src/main/resources/static/css/app.css
@@ -6,12 +6,15 @@ html {
 body {
     min-height: 500px;
     padding-top: 70px;
-    background-image: url(//img.fifa.com/images/fwc/2018/bg.jpg);
+    background-image: url(/images/bg.jpg);
     background-color: #fff;
     background-repeat: repeat-x;
     background-position: center 0;
 }
 
+.main {
+    background-color: #fff;
+}
 .affix {
     top: 50px;
     width: 100%;
