UI permissions admin page for updating result - UI only

--- a/src/main/resources/static/app/teams/view/teams.groups.html
+++ b/src/main/resources/static/app/teams/view/teams.groups.html
@@ -36,7 +36,7 @@
             <td>{{teamInGroup.points | number}}</td>
             <td>
                 <button type="button" class="btn btn-default btn-sm" data-toggle="collapse" data-target="#team-{{teamInGroup.team.code}}-matches">
-                    <span class="glyphicon glyphicon-collapse-down" aria-hidden="true"></span> Matches
+                    <span aria-hidden="true"></span> Matches
                 </button>
             </td>
         </tr>
