fix goals difference

--- a/src/main/resources/static/app/teams/view/teams.groups.html
+++ b/src/main/resources/static/app/teams/view/teams.groups.html
@@ -32,7 +32,7 @@
             <td>{{teamInGroup.gamesLose }}</td>
             <td>{{teamInGroup.goalsScored }}</td>
             <td>{{teamInGroup.goalsReceived }}</td>
-            <td>{{(teamInGroup.goalsScored - teamInGroup.team.goalsReceived)}}</td>
+            <td>{{(teamInGroup.goalsScored - teamInGroup.goalsReceived)}}</td>
             <td>{{teamInGroup.points | number}}</td>
             <td>
                 <button type="button" class="btn btn-default btn-sm" data-toggle="collapse" data-target="#team-{{teamInGroup.team.code}}-matches">
