--- a/src/main/resources/static/app/games/view/games.template.html
+++ b/src/main/resources/static/app/games/view/games.template.html
@@ -1,8 +1,8 @@
-<table class="table">
+<table class="table table-condensed">
     <tbody>
     <tr ng-repeat="match in matches">
         <td class="col-md-1">
-            <div><b>Group {{match.groupId}}</b></div>
+            <div><b>{{match.stage}}</b></div>
             <div>{{match.kickoff | date : 'MMM d, h:mm:ss a'}}</div>
         </td>
         <td class="col-md-2">
