--- a/src/main/resources/static/app/teams/view/teams.groups.html
+++ b/src/main/resources/static/app/teams/view/teams.groups.html
@@ -4,7 +4,7 @@
 
     <div class="panel-heading">Group {{group.groupId}}</div>
 
-    <table class="table table-hover">
+    <table class="table table-hover table-condensed">
         <thead>
         <tr>
             <th scope="col"></th>
