--- a/src/main/resources/static/app/games/view/games.secondstage.html
+++ b/src/main/resources/static/app/games/view/games.secondstage.html
@@ -1,32 +1,250 @@
+<div class="brackets_container">
+    <table>
+        <thead>
+        <tr>
+            <th><span>Round of 16</span></th>
+            <th><span>Quarter-finals</span></th>
+            <th><span>Semi-finals</span></th>
+            <th><span>final</span></th>
+            <th><span>Semi-finals</span></th>
+            <th><span>Quarter-finals</span></th>
+            <th><span>Round of 16</span></th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr id="playground">
 
-<table class="table table-condensed">
-    <tbody>
-    <tr ng-repeat="match in matches.secondStage">
-        <td class="col-md-1">
-            <div><b>{{match.stage}}</b></div>
-            <div>{{match.kickoff | date : 'MMM d, h:mm:ss a'}}</div>
-        </td>
-        <td class="col-md-2">
-            <div ng-switch="match.homeTeam || '_undefined_'">
-                <h2 ng-switch-when="_undefined_">TBD</h2>
-                <h2 ng-switch-default>
-                    <img class="flag" ng-src="/images/teams/{{match.homeTeam.confederation | spaceToUnderscore}}/{{match.homeTeam.code}}.png"/>
-                    {{match.homeTeam.name | capitalize }}
-                </h2>
-            </div>
-        </td>
-        <td class="col-md-2 text-center">
-            <h1>{{match.result.homeTeamGoals}} : {{match.result.awayTeamGoals}}</h1>
-        </td>
-        <td class="col-md-2">
-            <div ng-switch="match.awayTeam || '_undefined_'">
-                <h2 ng-switch-when="_undefined_">TBD</h2>
-                <h2 ng-switch-default>
-                    <img class="flag" ng-src="/images/teams/{{match.awayTeam.confederation | spaceToUnderscore}}/{{match.awayTeam.code}}.png"/>
-                    {{match.awayTeam.name | capitalize }}
-                </h2>
-            </div>
-        </td>
-    </tr>
-    </tbody>
-</table>
+            <td class="round_column r_16">
+
+                <div class="mtch_container" ng-repeat="match in matches.roundOf16Left">
+                    <div class="match_unit">
+                        <div class="m_segment m_top winner" data-team-id="9"><span>
+                            <a href="#"><team data="match.homeTeam"/></a>
+                            <strong>{{match.result.homeTeamGoals}}</strong>
+                        </span></div>
+                        <div class="m_segment m_botm loser" data-team-id="10"><span><a href="#">
+                            <team data="match.awayTeam"/>
+                        </a><strong>{{match.result.awayTeamGoals}}</strong></span></div>
+                        <div class="m_dtls"><span>{{match.kickoff | date : 'MMM d, yyyy - h:mm a'}}</span></div>
+                    </div>
+                </div>
+
+                <!--
+                <div class="mtch_container">
+                    <div class="match_unit">
+                        <div class="m_segment m_top winner" data-team-id="9"><span><a href="#"><img
+                                src="imgs/flags/Brazil.png"
+                                alt="Brazil"><span>Brazil</span></a><strong>4</strong></span></div>
+                        <div class="m_segment m_botm loser" data-team-id="10"><span><a href="#"><img
+                                src="imgs/flags/Canada.png"
+                                alt="Canada"><span>Canada</span></a><strong>2</strong></span></div>
+                        <div class="m_dtls"><span>June 10, 2015 - 8:00 pm</span></div>
+                    </div>
+                </div>
+                <div class="mtch_container">
+                    <div class="match_unit">
+                        <div class="m_segment m_top loser" data-team-id="11"><span><a href="#"><img
+                                src="imgs/flags/Germany.png"
+                                alt="Germany"><span>Germany</span></a><strong>0</strong></span></div>
+                        <div class="m_segment m_botm winner" data-team-id="12"><span><a href="#"><img
+                                src="imgs/flags/Italy.png" alt="Italy"><span>Italy</span></a><strong>2</strong></span>
+                        </div>
+                        <div class="m_dtls"><span>June 10, 2015 - 8:00 pm</span></div>
+                    </div>
+                </div>
+                <div class="mtch_container">
+                    <div class="match_unit">
+                        <div class="m_segment m_top loser" data-team-id="13"><span><a href="#"><img
+                                src="imgs/flags/Hungary.png"
+                                alt="Hungary"><span>Hungary</span></a><strong>2</strong></span></div>
+                        <div class="m_segment m_botm winner" data-team-id="14"><span><a href="#"><img
+                                src="imgs/flags/Ghana.png" alt="Ghana"><span>Ghana</span></a><strong>5</strong></span>
+                        </div>
+                        <div class="m_dtls"><span>June 10, 2015 - 8:00 pm</span></div>
+                    </div>
+                </div>
+                <div class="mtch_container">
+                    <div class="match_unit">
+                        <div class="m_segment m_top winner" data-team-id="16"><span><a href="#"><img
+                                src="imgs/flags/England.png"
+                                alt="England"><span>England</span></a><strong>0</strong></span></div>
+                        <div class="m_segment m_botm loser" data-team-id="15"><span><a href="#"><img
+                                src="imgs/flags/Sweden.png"
+                                alt="Sweden"><span>Sweden</span></a><strong>0</strong></span></div>
+                        <div class="m_dtls"><span>June 10, 2015 - 8:00 pm</span></div>
+                    </div>
+                </div>
+                -->
+            </td>
+
+            <td class="round_column r_8">
+                <div class="mtch_container">
+                    <div class="match_unit">
+                        <div class="m_segment m_top winner" data-team-id="9"><span><a href="#"><img
+                                src="imgs/flags/Brazil.png"
+                                alt="Brazil"><span>Brazil</span></a><strong>4</strong></span></div>
+                        <div class="m_segment m_botm loser" data-team-id="12"><span><a href="#"><img
+                                src="imgs/flags/Italy.png" alt="Italy"><span>Italy</span></a><strong>2</strong></span>
+                        </div>
+                        <div class="m_dtls"><span>June 10, 2015 - 8:00 pm</span></div>
+                    </div>
+                </div>
+                <div class="mtch_container">
+                    <div class="match_unit">
+                        <div class="m_segment m_top loser" data-team-id="14"><span><a href="#"><img
+                                src="imgs/flags/Ghana.png" alt="Ghana"><span>Ghana</span></a><strong>1</strong></span>
+                        </div>
+                        <div class="m_segment m_botm winner" data-team-id="16"><span><a href="#"><img
+                                src="imgs/flags/England.png"
+                                alt="England"><span>England</span></a><strong>3</strong></span></div>
+                        <div class="m_dtls"><span>June 10, 2015 - 8:00 pm</span></div>
+                    </div>
+                </div>
+            </td>
+
+            <td class="round_column r_4">
+                <div class="mtch_container">
+                    <div class="match_unit">
+                        <div class="m_segment m_top winner" data-team-id="9"><span><a href="#"><img
+                                src="imgs/flags/Brazil.png"
+                                alt="Brazil"><span>Brazil</span></a><strong>4</strong></span></div>
+                        <div class="m_segment m_botm loser" data-team-id="16"><span><a href="#"><img
+                                src="imgs/flags/England.png"
+                                alt="England"><span>England</span></a><strong>3</strong></span></div>
+                        <div class="m_dtls"><span>June 10, 2015 - 8:00 pm</span></div>
+                    </div>
+                </div>
+            </td>
+
+            <td class="round_column r_2 final">
+                <div class="winner_team"><span>WINNER<a href="#"><img src="imgs/flags/Brazil.png" alt="Brazil"><span>Brazil</span></a></span>
+                </div>
+                <div class="mtch_container">
+                    <div class="match_unit">
+                        <div class="m_segment m_top winner first" data-team-id="9"><span><a href="#"><img
+                                src="imgs/flags/Brazil.png"
+                                alt="Brazil"><span>Brazil</span></a><strong>4</strong></span></div>
+                        <div class="m_segment m_botm winner second" data-team-id="2"><span><a href="#"><img
+                                src="imgs/flags/Algeria.png"
+                                alt="Algeria"><span>Algeria</span></a><strong>3</strong></span></div>
+                        <div class="m_dtls"><span>June 10, 2015 - 8:00 pm</span></div>
+                    </div>
+                </div>
+                <div class="mtch_container third_position">
+                    <div class="match_unit">
+                        <div class="m_segment m_botm winner third" data-team-id="16"><span><a href="#"><img
+                                src="imgs/flags/England.png"
+                                alt="England"><span>England</span></a><strong>3</strong></span></div>
+                        <div class="m_segment m_top losers fourth" data-team-id="8"><span><a href="#"><img
+                                src="imgs/flags/Saudi-Arabia.png"
+                                alt="Saudi-Arabia"><span>Saudi</span></a><strong>2</strong></span></div>
+                        <div class="m_dtls"><span>June 10, 2015 - 8:00 pm</span></div>
+                    </div>
+                </div>
+            </td>
+
+            <td class="round_column r_4 reversed">
+                <div class="mtch_container">
+                    <div class="match_unit">
+                        <div class="m_segment m_top winner" data-team-id="2"><span><a href="#"><img
+                                src="imgs/flags/Algeria.png"
+                                alt="Algeria"><span>Algeria</span></a><strong>3</strong></span></div>
+                        <div class="m_segment m_botm loser" data-team-id="8"><span><a href="#"><img
+                                src="imgs/flags/Saudi-Arabia.png"
+                                alt="Saudi-Arabia"><span>Saudi</span></a><strong>2</strong></span></div>
+                        <div class="m_dtls"><span>June 10, 2015 - 8:00 pm</span></div>
+                    </div>
+                </div>
+            </td>
+
+            <td class="round_column r_8 reversed">
+                <div class="mtch_container">
+                    <div class="match_unit">
+                        <div class="m_segment m_top loser" data-team-id="3"><span><a href="#"><img
+                                src="imgs/flags/Egypt.png" alt="Egypt"><span>Egypt</span></a><strong>2</strong></span>
+                        </div>
+                        <div class="m_segment m_botm winner" data-team-id="2"><span><a href="#"><img
+                                src="imgs/flags/Algeria.png"
+                                alt="Algeria"><span>Algeria</span></a><strong>3</strong></span></div>
+                        <div class="m_dtls"><span>June 10, 2015 - 8:00 pm</span></div>
+                    </div>
+                </div>
+                <div class="mtch_container">
+                    <div class="match_unit">
+                        <div class="m_segment m_top loser" data-team-id="6"><span><a href="#"><img
+                                src="imgs/flags/Morocco.png"
+                                alt="Morocco"><span>Morocco</span></a><strong>1</strong></span></div>
+                        <div class="m_segment m_botm winner" data-team-id="8"><span><a href="#"><img
+                                src="imgs/flags/Saudi-Arabia.png"
+                                alt="Saudi-Arabia"><span>Saudi</span></a><strong>2</strong></span></div>
+                        <div class="m_dtls"><span>June 10, 2015 - 8:00 pm</span></div>
+                    </div>
+                </div>
+            </td>
+
+            <td class="round_column r_16 reversed">
+
+                <div class="mtch_container" ng-repeat="match in matches.roundOf16Right">
+                    <div class="match_unit">
+                        <div class="m_segment m_top winner" data-team-id="9"><span>
+                            <a href="#"><team data="match.homeTeam"/></a>
+                            <strong>{{match.result.homeTeamGoals}}</strong>
+                        </span></div>
+                        <div class="m_segment m_botm loser" data-team-id="10"><span><a href="#">
+                            <team data="match.awayTeam"/>
+                        </a><strong>{{match.result.awayTeamGoals}}</strong></span></div>
+                        <div class="m_dtls"><span>{{match.kickoff | date : 'MMM d, yyyy - h:mm a'}}</span></div>
+                    </div>
+                </div>
+                <!--
+                <div class="mtch_container">
+                    <div class="match_unit">
+                        <div class="m_segment m_top winner" data-team-id="3"><span><a href="#"><img
+                                src="imgs/flags/Egypt.png" alt="Egypt"><span>Egypt</span></a><strong>2</strong></span>
+                        </div>
+                        <div class="m_segment m_botm loser" data-team-id="4"><span><a href="#"><img
+                                src="imgs/flags/Angola.png"
+                                alt="Angola"><span>Angola</span></a><strong>0</strong></span></div>
+                        <div class="m_dtls"><span>June 10, 2015 - 8:00 pm</span></div>
+                    </div>
+                </div>
+                <div class="mtch_container">
+                    <div class="match_unit">
+                        <div class="m_segment m_top loser" data-team-id="1"><span><a href="#"><img
+                                src="imgs/flags/Libya.png" alt="Libya"><span>Libya</span></a><strong>2</strong></span>
+                        </div>
+                        <div class="m_segment m_botm winner" data-team-id="2"><span><a href="#"><img
+                                src="imgs/flags/Algeria.png"
+                                alt="Algeria"><span>Algeria</span></a><strong>4</strong></span></div>
+                        <div class="m_dtls"><span>June 10, 2015 - 8:00 pm</span></div>
+                    </div>
+                </div>
+                <div class="mtch_container">
+                    <div class="match_unit">
+                        <div class="m_segment m_top loser" data-team-id="5"><span><a href="#"><img
+                                src="imgs/flags/Sudan.png" alt="Sudan"><span>Sudan</span></a><strong>0</strong></span>
+                        </div>
+                        <div class="m_segment m_botm winner" data-team-id="6"><span><a href="#"><img
+                                src="imgs/flags/Morocco.png"
+                                alt="Morocco"><span>Morocco</span></a><strong>1</strong></span></div>
+                        <div class="m_dtls"><span>June 10, 2015 - 8:00 pm</span></div>
+                    </div>
+                </div>
+                <div class="mtch_container">
+                    <div class="match_unit">
+                        <div class="m_segment m_top loser" data-team-id="7"><span><a href="#"><img
+                                src="imgs/flags/France.png"
+                                alt="France"><span>France</span></a><strong>1</strong></span></div>
+                        <div class="m_segment m_botm winner" data-team-id="8"><span><a href="#"><img
+                                src="imgs/flags/Saudi-Arabia.png"
+                                alt="Saudi-Arabia"><span>Saudi</span></a><strong>2</strong></span></div>
+                        <div class="m_dtls"><span>June 10, 2015 - 8:00 pm</span></div>
+                    </div>
+                </div>
+                -->
+
+            </td>
+        </tr>
+        </tbody>
+    </table>
+</div>
