--- a/src/main/resources/static/app/teams/view/teams.confederations.html
+++ b/src/main/resources/static/app/teams/view/teams.confederations.html
@@ -22,12 +22,7 @@
                 </thead>
                 <tbody>
                 <tr ng-repeat="team in teams">
-                    <th>
-                        <h3>
-                            <img class="flag" ng-src="/images/teams/{{team.confederation | spaceToUnderscore}}/{{team.code}}.png"/>
-                            {{team.name | capitalize }}
-                        </h3>
-                    </th>
+                    <th><h3><team data="team"/></h3></th>
                     <td>{{team.fifaRanking}}</td>
                     <td>{{team.titles}}</td>
                     <td>{{team.appearances}}</td>
