rearrange navbar added application ready event and execute on match finish improve api data improve admin page

--- a/src/main/resources/static/app/directives/view/brackets.team.template.html
+++ b/src/main/resources/static/app/directives/view/brackets.team.template.html
@@ -1,9 +1,15 @@
 <div class="match_unit">
     <div class="m_segment m_top winner" data-team-id="{{match.homeTeam.code}}">
-        <span><a href="#"><team data="match.homeTeam"/></a><strong>{{match.result.homeTeamGoals}}</strong></span>
+        <span ng-switch="match.homeTeam || '_undefined_'" >
+            <span ng-switch-when="_undefined_">{{match.homeTeamCode}}</span>
+            <span ng-switch-default><a href="#"><team data="match.homeTeam"/></a><strong>{{match.result.homeTeamGoals}}</strong></span>
+        </span>
     </div>
-    <div class="m_segment m_botm loser" data-team-id="{{match.homeTeam.code}}">
-        <span><a href="#"><team data="match.awayTeam"/></a><strong>{{match.result.awayTeamGoals}}</strong></span>
+    <div class="m_segment m_botm loser" data-team-id="{{match.awayTeam.code}}">
+        <span ng-switch="match.awayTeam || '_undefined_'" >
+            <span ng-switch-when="_undefined_">{{match.awayTeamCode}}</span>
+            <span ng-switch-default><a href="#"><team data="match.awayTeam"/></a><strong>{{match.result.awayTeamGoals}}</strong></span>
+        </span>
     </div>
     <div class="m_dtls"><span>{{match.kickoff | date : 'MMM d, yyyy - h:mm a'}}</span></div>
 </div>
