--- a/src/main/resources/static/css/bracket.css
+++ b/src/main/resources/static/css/bracket.css
@@ -1,3 +1,5 @@
+
+/*
 html {
     box-sizing: border-box;
     background-color: #f0f0f0
@@ -13,13 +15,14 @@ body {
     outline: 0;
     border: 0
 }
+*/
 
 .brackets_container {
     padding: 10px;
     font-family: tahoma;
     min-width: 550px;
     background-color: darkslategray;
-    color: #fff;
+    color: #000;
 }
 
 .brackets_container a {
@@ -40,7 +43,7 @@ body {
     padding: 10px 0;
     width: 10%;
     font-weight: normal;
-    //color: #777
+    color: #fff
 }
 
 .round_column {
