--- a/src/main/resources/static/css/app.css
+++ b/src/main/resources/static/css/app.css
@@ -53,13 +53,13 @@ body {
 .back-to-top {
     position: fixed;
     bottom: 20px;
-    right: 20px;
+    right: 50px;
     z-index: 1;
     width: 50px;
     height: 40px;
-    background: #ddd;
+    background: #000;
     border-radius: 10px;
-    opacity: 0.5;
+    opacity: 0.6;
     display: none;
 }
 
