--- a/src/main/resources/static/app/bets/view/bets.view.html
+++ b/src/main/resources/static/app/bets/view/bets.view.html
@@ -2,28 +2,46 @@
     <h1>Set bets for games
         <small>Only you can see your bets</small>
     </h1>
-
     <div class="panel panel-primary">
         <div class="panel-heading">Select game panel</div>
         <div class="panel-body">
             <form class="form-horizontal" action="">
+
                 <div class="form-group">
                     <label class="control-label col-sm-2" for="firstStageMatchesList">First Stage Matches:</label>
 
+                    <!--
+                    <ui-select id="firstStageMatchesList"
+                               ng-model="selected.match"
+                               theme="boot"
+                               title="Choose a match"
+                               on-select="onMatchSelected('first')"
+                                style="width: 250px;">
+                        <ui-select-match>
+                            <span ng-bind="$select.selected.label"></span>
+                        </ui-select-match>
+                        <ui-select-choices
+                                group-by="ctrl.firstLetterGroupFn"
+                                group-filter="['Z','B','C']"
+                                repeat="match in (matchesData.firstStage | filter: $select.search) track by match.matchId">
+                            <span ng-bind="match.label"></span>
+                        </ui-select-choices>
+                    </ui-select>
 
+                    -->
 
-                    <ui-select ng-model="selected.match" theme="select2"   title="Choose a match">
+                    <!--
+                    <ui-select ng-model="selected.match" theme="select2"  title="Choose a match">
                         <ui-select-match placeholder="Select a match in the list or search">{{$selected.match.label}}</ui-select-match>
                         <ui-select-choices group-by="'groupId'" repeat="match in matchesData.firstStage | propsFilter: {matchId: $select.search}">
                             <div ng-bind-html="match.label | highlight: $select.search"></div>
-                            <small>
+                           <small>
                                 id: {{match.id}}
                                 label: <span ng-bind-html="''+match.label | highlight: $select.search"></span>
                             </small>
                         </ui-select-choices>
                     </ui-select>
-
-
+                    -->
 
                     <div class="col-sm-10">
                         <select id="firstStageMatchesList"
@@ -32,7 +50,10 @@
                                 ng-model="selected.match"
                                 ng-change="onMatchSelected('first')"></select>
                     </div>
+
                 </div>
+
+
 
                 <div class="form-group">
                     <label class="control-label col-sm-2">Qualifiers:</label>
