--- a/src/main/resources/static/app/directives/view/brackets.team.template.html
+++ b/src/main/resources/static/app/directives/view/brackets.team.template.html
@@ -1,11 +1,11 @@
 <div class="match_unit">
-    <div class="m_segment m_top winner" data-team-id="{{match.homeTeam.code}}">
+    <div class="m_segment m_top  {{homeTeamClass}}" data-team-id="{{match.homeTeam.code}}">
         <span ng-switch="match.homeTeam || '_undefined_'" >
             <span ng-switch-when="_undefined_">{{match.homeTeamCode}}</span>
             <span ng-switch-default><a href="#"><team data="match.homeTeam"/></a><strong>{{match.result.homeTeamGoals}}</strong></span>
         </span>
     </div>
-    <div class="m_segment m_botm loser" data-team-id="{{match.awayTeam.code}}">
+    <div class="m_segment m_botm  {{awayTeamClass}}" data-team-id="{{match.awayTeam.code}}">
         <span ng-switch="match.awayTeam || '_undefined_'" >
             <span ng-switch-when="_undefined_">{{match.awayTeamCode}}</span>
             <span ng-switch-default><a href="#"><team data="match.awayTeam"/></a><strong>{{match.result.awayTeamGoals}}</strong></span>
