--- a/src/main/resources/static/app/bets/view/bets.games.view.html
+++ b/src/main/resources/static/app/bets/view/bets.games.view.html
@@ -1,6 +1,6 @@
 <section id="games">
     <div>
-        <h1>Matches <small> As you predicted, {{view.section}}</small></h1>
+        <h1>Matches <small>{{view.section}} (As you predicted)</small></h1>
 
         <ul class="nav nav-tabs nav-justified">
             <li role="presentation" ui-sref-active="active"><a ui-sref="bets-games.firststage">First Stage</a></li>
