add validation to result and bets removed permission from FB and fixed callback url

--- a/src/main/resources/static/css/app.css
+++ b/src/main/resources/static/css/app.css
@@ -46,7 +46,8 @@ body {
 
 .flag {
     width: 48px;
-    height: 32px;
+    /*height: 32px;*/
+    margin-top: 2px;
     border: 1px solid #c7c6c6;
 }
 
