--- a/src/main/resources/static/app/directives/view/match.template.html
+++ b/src/main/resources/static/app/directives/view/match.template.html
@@ -1,17 +1,17 @@
 <table class="table table-hover table-striped table-condensed">
     <tbody>
-    <tr ng-repeat="match in matches">
+    <tr ng-repeat="match in matches | orderBy: 'kickoff'">
         <td class="col-md-1">
             <div><b>{{match.stage}}</b></div>
             <div>{{match.kickoff | date : 'MMM d, h:mm a'}}</div>
         </td>
-        <td class="col-md-1">
+        <td class="col-md-2">
             <h4><team data="match.homeTeam"/></h4>
         </td>
         <td class="col-md-1 text-center">
             <h3>{{match.result.homeTeamGoals}} : {{match.result.awayTeamGoals}}</h3>
         </td>
-        <td class="col-md-1">
+        <td class="col-md-2">
             <h4><team data="match.awayTeam"/></h4>
         </td>
         <td class="col-md-3">&nbsp;</td>
