make bets views and game views same - not final

--- a/src/main/resources/static/app/games/view/games.secondstage.html
+++ b/src/main/resources/static/app/games/view/games.secondstage.html
@@ -36,7 +36,7 @@
 
                 <div class="winner_team">
                     <span>WINNER<a href="#">
-                        <team data="finalWinner"/>
+                        <team data="matches.finalWinner"/>
                     </span>
                 </div>
 
