--- a/src/main/resources/static/app/bets/view/bets.view.html
+++ b/src/main/resources/static/app/bets/view/bets.view.html
@@ -64,20 +64,24 @@
                             <td class="col-md-4"><team data="selected.match.awayTeam"></team></td>
                             <td class="col-md-1 text-center">
                                 <input type="number"
+                                       min="0" max="20"
                                        class="form-control"
-                                       id="homeTeamGaols"
+                                       id="homeTeamGoals"
                                        placeholder="Enter score"
                                        ng-model="userBet.homeTeamGoals"
-                                       size="3">
+                                       size="3"
+                                       ng-change="onGoalsChanged()">
                             </td>
                             <td class="col-md-1 text-center">:</td>
                             <td class="col-md-1 text-center">
                                 <input type="number"
+                                       min="0" max="20"
                                        class="form-control"
                                        id="awayTeamGoals"
                                        placeholder="Enter score"
                                        ng-model="userBet.awayTeamGoals"
-                                       size="3">
+                                       size="3"
+                                       ng-change="onGoalsChanged()">
                             </td>
                         </tr>
                         </tbody>
@@ -85,10 +89,10 @@
                     </div>
                 </div>
 
-                <div class="form-group">
+                <div class="form-group" ng-show="selected.bet.stageId != 'GROUP'">
                     <label class="control-label col-sm-2" for="machtQualifier">Match qualifier:</label>
                     <div class="col-sm-10">
-                        <select id="machtQualifier" class="form-control" ng-model="userBet.qualifier" ng-options="x for x in ['HOME_TEAM','AWAY_TEAM']"></select>
+                        <select id="machtQualifier" class="form-control" ng-model="userBet.matchQualifier" ng-options="x for x in options.matchQualifier"></select>
                     </div>
                 </div>
 
