re-arrange ui files and navbar delete some unused files

--- a/src/main/resources/static/app/bets/view/bets.games.view.html
+++ b/src/main/resources/static/app/bets/view/bets.games.view.html
@@ -3,8 +3,8 @@
         <h1>Matches <small>{{view.section}} (As you predicted)</small></h1>
 
         <ul class="nav nav-tabs nav-justified">
-            <li role="presentation" ui-sref-active="active"><a ui-sref="bets-games.firststage">First Stage</a></li>
-            <li role="presentation" ui-sref-active="active"><a ui-sref="bets-games.secondstage">Second Stage</a></li>
+            <li role="presentation" ui-sref-active="active"><a ui-sref="bets.firststage">First Stage</a></li>
+            <li role="presentation" ui-sref-active="active"><a ui-sref="bets.secondstage">Second Stage</a></li>
         </ul>
     </div>
 
