--- a/src/main/resources/static/app/games/view/games.secondstage.html
+++ b/src/main/resources/static/app/games/view/games.secondstage.html
@@ -35,8 +35,10 @@
             <td class="round_column r_2 final">
 
                 <div class="winner_team">
-                    <span>WINNER<a href="#">
+                    <span>WINNER
+                        <a href="/#/">
                         <team data="matches.finalWinner"/>
+                        </a>
                     </span>
                 </div>
 
