--- a/src/main/resources/static/app/bets/view/bets.view.html
+++ b/src/main/resources/static/app/bets/view/bets.view.html
@@ -99,11 +99,29 @@
                 <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
                         <button type="submit" class="btn btn-primary">Submit</button>
+
+                        <button type="button" class="btn btn-danger" data-ng-click="confirmDeleteBet()">danger</button>
                     </div>
+
                 </div>
             </form>
 
         </div>
     </div>
+
+    <script type="text/ng-template" id="confirmModalContent.html">
+        <div class="modal-header">
+            <h3 class="modal-title" id="modal-title">Confirm Delete</h3>
+        </div>
+        <div class="modal-body" id="modal-body">
+           Are you sure you want to delete your Bet?
+        </div>
+        <div class="modal-footer">
+            <button class="btn btn-primary" type="button" ng-click="deleteBet()">OK</button>
+            <button class="btn btn-warning" type="button" ng-click="cancel()">Cancel</button>
+        </div>
+    </script>
+
+
 
 </section>
