--- a/src/main/resources/static/app/bets/view/bets.view.html
+++ b/src/main/resources/static/app/bets/view/bets.view.html
@@ -99,8 +99,7 @@
                 <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
                         <button type="submit" class="btn btn-primary">Submit</button>
-
-                        <button type="button" class="btn btn-danger" data-ng-click="confirmDeleteBet()">danger</button>
+                        <button type="button" class="btn btn-danger" data-ng-click="confirmDeleteBet()">Delete</button>
                     </div>
 
                 </div>
