changed some files names fixed session issue added bets overview page

--- a/src/main/resources/static/app/bets/view/bets.manage.html
+++ b/src/main/resources/static/app/bets/view/bets.manage.html
@@ -1,4 +1,4 @@
-<section id="bets-mine" permission="['ROLE_USER']">
+<section id="bets-manage" permission="['ROLE_USER']">
     <h1>Set bets for games
         <small>Only you can see your bets</small>
     </h1>
