--- a/src/main/resources/static/app/directives/view/match.template.html
+++ b/src/main/resources/static/app/directives/view/match.template.html
@@ -14,7 +14,8 @@
         <td class="col-md-2">
             <h4><team data="match.awayTeam"/></h4>
         </td>
-        <td class="col-md-3">&nbsp;</td>
+        <td class="col-md-2">&nbsp;</td>
+        <td class="col-md-1" id="match-{{match.matchId}}-link">&nbsp;</td>
     </tr>
     </tbody>
 </table>
