--- a/src/main/resources/static/app/bets/view/bets.overview.html
+++ b/src/main/resources/static/app/bets/view/bets.overview.html
@@ -12,7 +12,7 @@
                 <th scope="col">Description</th>
                 <th scope="col">Stage Id</th>
                 <th scope="col">Lock Timed</th>
-                <th scope="col">Correct Match Result</th>
+                <th scope="col">Correct Result</th>
                 <th scope="col">Correct Score</th>
                 <th scope="col">Points</th>
                 <th scope="col">&nbsp;</th>
