start changes to support correct betting separate bets on matches and bets on qualifiers first step

--- a/src/main/resources/static/app/bets/view/bets.matches.html
+++ b/src/main/resources/static/app/bets/view/bets.matches.html
@@ -1,4 +1,4 @@
-<section id="bets-manage" permission="['ROLE_USER']">
+<section id="bets-matches" permission="['ROLE_USER']">
     <h1>Set bets for games
         <small>Only you can see your bets</small>
     </h1>
@@ -17,6 +17,7 @@
                     </div>
                 </div>
 
+                <!--
                 <div class="form-group">
                     <label class="control-label col-sm-2">Qualifiers:</label>
                     <div class="col-sm-10">
@@ -26,7 +27,7 @@
                         </div>
                     </div>
                 </div>
-
+                -->
                 <div class="form-group">
                     <label class="control-label col-sm-2" for="secondStageMatchesList">Second Stage Matches:</label>
                     <div class="col-sm-10">
