--- a/src/main/resources/static/app/bets/view/bets.overview.html
+++ b/src/main/resources/static/app/bets/view/bets.overview.html
@@ -1,4 +1,4 @@
-<section id="bets-overview">
+<section id="bets-overview" permission="['ROLE_USER']">
 
     <div class="jumbotron">
         <h2>Your bets overview</h2>
@@ -47,11 +47,11 @@
                     </span>
                 </td>
                 <td>{{data.calculatedUserBet.totalPoints}}</td>
-                <td><a ui-sref="bets.manage({matchId: data.match.matchId})">Go to bet</a></td>
+                <td><a ui-sref="bets.matches({matchId: data.match.matchId})">Go to bet</a></td>
             </tr>
             </tbody>
         </table>
-
+<!--
         <h2>Qualifiers Bets</h2>
         <table class="table table-hover table-condensed">
             <thead>
@@ -75,7 +75,7 @@
             </tr>
             </tbody>
         </table>
-
+-->
     </div>
 
 </section>
